fix: padding spacing

--- a/src/components/DealOfTheWeek/DealOfTheWeek.scss
+++ b/src/components/DealOfTheWeek/DealOfTheWeek.scss
@@ -20,7 +20,6 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    padding-bottom: 1rem;
     flex-wrap: wrap;
     gap: 0.5rem;
     justify-content: center;
